# pneumonia_classifier

./: .dockerignore  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  README.rst  app.py  bentofile.yaml  celery_worker.py  docker-compose.yml  index.html  main.py  mlflow.db  register_model.py  requirements.txt  requirements_dev.txt  service.py  setup.cfg  setup.py  streamlit_app.py  template.py  tox.ini
.github/: ISSUE_TEMPLATE.md
data/: patient_history.db
docs/: ML_PIPELINE.md  Makefile  RESEARCH_FINDINGS.md  XAI_WORKFLOW.md  architecture.md  conf.py  index.rst  installation.rst  make.bat  usage.rst
frontend/: analytics_tab.py  diagnosis_tab.py  history_tab.py  utils.py
gh-pages/: index.html
models/: best_model_optuna.pt  fp32_model.pt  int8_model.pt  latest_model.pt  model_v1.pt  pneumonia_classifier_aug_augmented_heavy_wypxe3qwqsx75ahb.pt  pneumonia_classifier_aug_baseline_no_augmentation_zvyot3qwqgnsfahb.pt  pneumonia_classifier_cnn_int8_ra32tviwyo4u3ahb.pt  pneumonia_classifier_cnn_int8_tgzwzsqwqw54dahb.pt  pneumonia_classifier_cnn_uza7heywpgthvahb.pt
notebooks/: 01-data-ingestion-AyushDocs.ipynb  02-cnn-model-training-AyushDocs.ipynb  02-data-transformation-AyushDocs.ipynb  03-model-evaluation-AyushDocs.ipynb  03-model-training-AyushDocs.ipynb  04-data-augmentation-analysis-AyushDocs.ipynb  04-model-evaluation-AyushDocs.ipynb  05-bentoml-integration-AyushDocs.ipynb  05-model-quantization-AyushDocs.ipynb  06-grad-cam-xai-AyushDocs.ipynb  07-hyperparameter-tuning-AyushDocs.ipynb  08-mlflow-tracking-AyushDocs.ipynb  (+3 more)
(+36 files in other folders)
