[metadata]
name = pneumonia_classifier
version = 0.0.0
author = Ayush Dubey
author_email = ayushalokdubey@gmail.com
description = Tri-Modal Ensemble Pneumonia Detection from Chest X-Rays
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    torch
    torchvision
    numpy
    pandas
    opencv-python
    pillow
    streamlit
    celery
    redis
    apscheduler
    pydantic-settings
    reportlab
    pydicom
    onnxruntime

[flake8]
max-line-length = 100
exclude = .tox,.git,__pycache__,docs/conf.py,build,dist,*.egg-info,.venv
ignore = E203, W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --cov=pneumonia_classifier --cov-report=term-missing
